# internal/handler/request.go
@@ -1,0 +1,5 @@
+package handler
+
+type RefreshTokensRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
